clusters/cluster.boem/traefik/ingresses/as216455.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: as216455.net
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`as216455.net`)
      services:
        - kind: Service
          name: sting-as-site
          namespace: default
          port: 80
    - kind: Rule
      match: Host(`rpki.as216455.net`)
      services:
        - kind: Service
          name: krill-http
          namespace: default
          port: 3000
          scheme: https

  tls:
    secretName: as216455.net-prod-tls
