clusters/cluster.boem/traefik/ingresses/isaensting.nl.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: isaensting.nl
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes: []

  tls:
    secretName: isaensting.nl-prod-tls
