clusters/cluster.boem/traefik/ingresses/kluster.boem.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kluster.boem
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  # middlewares:
  #   - name: internal-whitelist
  routes:
    - kind: Rule
      match: Host(`pve.kluster.boem`)
      services:
        - kind: Service
          name: pve
          namespace: traefik
          port: 8006
    - kind: Rule
      match: Host(`alerts.kluster.boem`)
      middlewares:
        - name: internal-whitelist
      services:
        - kind: Service
          name: alertmanager-operated
          namespace: monitoring
          passHostHeader: true
          port: 9093

    - kind: Rule
      match: Host(`traefik.kluster.boem`)
      middlewares:
        - name: internal-whitelist
      services:
        - name: traefik-api
          namespace: traefik
          port: 9000

    # - kind: Rule
    # match: Host(`longhorn.kluster.boem`)
    # middlewares:
    #   - name: internal-whitelist
    # services:
    #   - name: longhorn-frontend
    #     namespace: longhorn-system
    #     port: 80

    - kind: Rule
      match: Host(`prometheus.kluster.boem`)
      middlewares:
        - name: internal-whitelist
      services:
        - name: prometheus-operated
          namespace: monitoring
          port: http-web

    # - kind: Rule
    #   match: Host(`mailslurper.kluster.boem`)
    #   middlewares:
    #     - name: internal-whitelist
    #   services:
    #     - name: fake-smtp-server-ui
    #       namespace: mailslurper
    #       port: 4436

    # - kind: Rule
    #   match: Host(`mailslurper.kluster.boem`) && PathPrefix(`/adminm`)
    #   middlewares:
    #     - name: mailslurper-stripprefix
    #   services:
    #     - name: fake-smtp-server-admin
    #       namespace: mailslurper
    # port: 4437

    - kind: Rule
      match: Host(`dns.kluster.boem`)
      services:
        - name: pdns-admin
          namespace: default
          port: 80

    - kind: Rule
      match: Host(`pgadmin.kluster.boem`)
      services:
        - name: pgadmin4
          namespace: default
          port: 5050

    - kind: Rule
      match: Host(`netbox.kluster.boem`)
      services:
        - name: internals-vm
          namespace: traefik
          port: 8000

    - kind: Rule
      match: Host(`hubble.kluster.boem`)
      services:
        - name: hubble-ui
          namespace: kube-system
          port: 80

    - kind: Rule
      match: Host(`hubble-relay.kluster.boem`)
      services:
        - name: hubble-relay-ext
          namespace: kube-system
          port: 4245

    - kind: Rule
      match: Host(`postgres.kluster.boem`)
      services:
        - name: postgres-operator-ui
          namespace: postgres
          port: 80

    - kind: Rule
      match: Host(`oxidized.kluster.boem`)
      services:
        - name: oxidized
          namespace: default
          port: 80

    - kind: Rule
      match: Host(`windmill.kluster.boem`)
      services:
        - name: windmill-app
          namespace: windmill
          port: 8000

  tls:
    secretName: kluster.boem-certs
