clusters/cluster.boem/traefik/ingresses/maishond.nl.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maishond.nl
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`media.maishond.nl`)
      services:
        - kind: Service
          name: media-stingalleman-nl
          namespace: traefik
          port: 8096

    - kind: Rule
      match: Host(`request.maishond.nl`)
      services:
        - kind: Service
          name: media-stingalleman-nl
          namespace: traefik
          port: 5055

    - kind: Rule
      match: Host(`leuk-achtergrondje.maishond.nl`)
      services:
        - kind: Service
          name: achtergrondje
          namespace: default
          port: 80

    - kind: Rule
      match: Host(`aap.maishond.nl`)
      services:
        - kind: Service
          name: rhel-aap
          namespace: default
          port: 443
          scheme: https
          serversTransport: insecure

    - kind: Rule
      match: Host(`monkey.maishond.nl`)
      services:
        - kind: Service
          name: rhel-aap
          namespace: default
          port: 443
          scheme: https
          serversTransport: insecure
      middlewares:
        - name: monkey-redirect
          namespace: traefik

  tls:
    secretName: maishond.nl-prod-tls
