clusters/cluster.boem/traefik/ingresses/stingalleman.nl.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: stingalleman.nl
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`stingalleman.nl`)
      services:
        - kind: Service
          name: stingalleman-website
          namespace: default
          passHostHeader: true
          port: 80

    - kind: Rule
      match: Host(`grafiekjes.stingalleman.nl`)
      services:
        - name: prometheus-stack-grafana
          namespace: monitoring
          port: 80
          passHostHeader: true

    - kind: Rule
      match: Host(`flux-webhook.stingalleman.nl`)
      services:
        - name: webhook-receiver
          namespace: flux-system
          port: 80

    - kind: Rule
      match: Host(`kube.stingalleman.nl`)
      services:
        - name: kube-ops-view
          namespace: kube-ops-view
          port: 8080

    - kind: Rule
      match: Host(`status.stingalleman.nl`)
      services:
        - kind: Service
          name: stingalleman-website
          namespace: default
          passHostHeader: true
          port: 80

  tls:
    secretName: stingalleman.nl-prod-tls
